--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 KOKKOS_PATH = ${HOME}/kokkos
 
 #Backend and architecture configuration
-KOKKOS_DEVICES=OpenMP
+KOKKOS_DEVICES=Serial
 KOKKOS_ARCH = ""
 
 #MPI On or off (1/0)
