--- a/src/neighbor_types/CMakeLists.txt
+++ b/src/neighbor_types/CMakeLists.txt
@@ -1,11 +1,13 @@
 SET(HEADERS
   neighbor_2d.h
   neighbor_csr.h
+  neighbor_arborx_csr.h
   neighbor_csr_map_constr.h)
 
 SET(SOURCES
   neighbor_2d.cpp
   neighbor_csr.cpp
+  neighbor_arborx_csr.cpp
   neighbor_csr_map_constr.cpp)
 
 target_sources(ExaMiniMD PRIVATE ${SOURCES} ${HEADERS})
